force-app/main/default/objects/Knowledge__kav/fields/Attachment1__c.field-meta.xml
<CustomField>
    <fullName>Attachment1__c</fullName>
    <label>Attachment1</label>
    <type>File</type>
</CustomField>