force-app/main/default/objects/Knowledge__kav/fields/Attachment2__c.field-meta.xml
<CustomField>
    <fullName>Attachment2__c</fullName>
    <label>Attachment2</label>
    <type>File</type>
</CustomField>