force-app/main/default/objects/Knowledge__kav/fields/Attachment3__c.field-meta.xml
<CustomField>
    <fullName>Attachment3__c</fullName>
    <label>Attachment3</label>
    <type>File</type>
</CustomField>