force-app/main/default/objects/Knowledge__kav/fields/fm_ArticleLink__c.field-meta.xml
<CustomField>
    <fullName>fm_ArticleLink__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Knowledge__kav/&quot;&amp;CASESAFEID(Id)&amp;&quot;/view&quot;,Title)</formula>
    <label>Article Link</label>
    <type>Text</type>
</CustomField>