force-app/main/default/objects/Knowledge__kav/fields/KDCE_ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ApprovalStatus__c</fullName>
    <description>Knowledge 승인 상태</description>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>