force-app/main/default/objects/Knowledge__kav/fields/KDCE_SubCategory__c.field-meta.xml
<CustomField>
    <fullName>KDCE_SubCategory__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GTP</fullName>
            </value>
            <value>
                <fullName>LTP</fullName>
            </value>
            <value>
                <fullName>SOP</fullName>
            </value>
            <value>
                <fullName>News</fullName>
            </value>
            <value>
                <fullName>Promotion/Campaign</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>