force-app/main/default/objects/Knowledge__kav/fields/OutOfDate__c.field-meta.xml
<CustomField>
    <fullName>OutOfDate__c</fullName>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Out Of Date</label>
    <type>Text</type>
</CustomField>