force-app/main/default/objects/Knowledge__kav/fields/SendEmailNotification__c.field-meta.xml
<CustomField>
    <fullName>SendEmailNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email Notification</label>
    <type>Checkbox</type>
</CustomField>