force-app/main/default/objects/Knowledge__kav/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>