force-app/main/default/objects/Knowledge__kav/recordTypes/Activites.recordType-meta.xml
<RecordType>
    <fullName>Activites</fullName>
    <active>false</active>
    <label>Activites</label>
</RecordType>