force-app/main/default/objects/Knowledge__kav/recordTypes/KnowledgeArticle.recordType-meta.xml
<RecordType>
    <fullName>KnowledgeArticle</fullName>
    <active>true</active>
    <label>Knowledge Article</label>
</RecordType>