force-app/main/default/objects/Knowledge__kav/listViews/Drafted.listView-meta.xml
<ListView>
    <fullName>Drafted</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>1,2</value>
    </filters>
    <filters>
        <field>OWNER_ID</field>
        <operation>equals</operation>
    </filters>
    <label>Drafted</label>
</ListView>